// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/npm/package getPackageUpdates returns warning if no npm dep found 1`] = `
Array [
  Object {
    "message": "Failed to look up dependency some-dep",
    "type": "warning",
  },
]
`;

exports[`lib/manager/npm/package getPackageUpdates returns warning if using invalid version 1`] = `
Array [
  Object {
    "depName": "some-dep",
    "message": "Dependency uses tag \\"\`git+ssh://git@github.com/joefraley/eslint-config-meridian.git\`\\" as its version so that will never be changed by Renovate",
    "type": "warning",
  },
]
`;
